2024-05-01T00:42:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8903576171 # 231
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-01
* notice: last 14d: unq all: 146 225
* notice: prev accum: outdated-unq outdated-all / unq all: 3149 7425 / 3304 7639
* notice: next accum: outdated-unq outdated-all / unq all: 3149 7425 / 3312 7651
* notice: prev exec diff / last date diff / accum: unq all: +8 +12 -0 -1 / +34 +56 -0 -0 / 34 56
* notice: removed / changed dates: [] / [2024-04-17 2024-04-30]

2024-04-30T16:11:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8898099106 # 230
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-30
* notice: last 14d: unq all: 139 214
* notice: prev accum: outdated-unq outdated-all / unq all: 3148 7423 / 3304 7639
* notice: next accum: outdated-unq outdated-all / unq all: 3149 7425 / 3304 7639
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-16] / []

2024-04-30T08:11:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8891468562 # 229
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-30
* notice: last 14d: unq all: 140 215
* notice: prev accum: outdated-unq outdated-all / unq all: 3148 7423 / 3278 7595
* notice: next accum: outdated-unq outdated-all / unq all: 3148 7423 / 3304 7639
* notice: prev exec diff / last date diff / accum: unq all: +26 +44 -0 -1 / +26 +44 -0 -0 / 26 44
* notice: removed / changed dates: [] / [2024-04-16 2024-04-30]

2024-04-29T16:10:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8881827198 # 227