@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-01T00:42:25Z",
-  "count_outdated" : 7425,
-  "uniques_outdated" : 3149,
+  "timestamp" : "2024-05-01T16:10:51Z",
+  "count_outdated" : 7427,
+  "uniques_outdated" : 3150,
   "count" : 7651,
   "uniques" : 3312,
   "clones" : [
-    {
-      "timestamp": "2024-04-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-18T00:00:00Z",
       "count": 2,
