@@ -1,12 +1,7 @@
 {
-  "count": 225,
+  "count": 224,
   "uniques": 146,
   "clones": [
-    {
-      "timestamp": "2024-04-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-04-18T00:00:00Z",
       "count": 2,
